--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest requests python-dotenv # Добавь python-dotenv если используешь
+        pip install pytest requests python-dotenv 
 
 
     - name: Run tests with pytest
